[package]
name = "wordle_tui"
version = "0.1.0"
authors = ["Paolo Imbriani <imbriani.paolo@hotmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
chrono = "0.4.42"
reqwest = "0.12.24"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
tokio = { version = "1.48.0", features = ["full"] }
itertools = "0.14.0"
unicode-width = "0.2.0"
